# tensorflow-from-scratch

./: CMakeLists.txt  README.md
backend/: custom-backend.cc  custom-backend.h  operation.cc  operation.h  tensor.cc  tensor.h
binders/: pybinder.cc
